require the 'illuminate/database' package

--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
     }
     },
     "require": {
-        "illuminate/support": "^8.25"
+        "illuminate/support": "^8.25",
+        "illuminate/database": "^8.25"
     }
 }
